# llm_runner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  openai_openapi.yaml  pyproject.toml  pyrightconfig.json  rustfmt.toml
.github/workflows/: CI.yml
examples/: playground.rs
src/: cacher.rs  lib.rs  logger.rs  network_client.rs  openai_network_types.rs  openai_response_types.rs  provider.rs  py_worker.rs  runner.rs  stream_handler.rs  sublime_python.rs  tools_definition.rs  types.rs  worker.rs
tests/: test_sublime_python.py  test_worker_python.py  worker_test.rs
tests/common/: mocks.rs
