[package]
name = "rust_helper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
