[package]
name = "llm_runner"
version = "0.2.8"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.20"
futures-util = "0.3"
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0"
fern = "0.7"
log = "0.4"
eventsource-stream = "0.2"
regex = "1.11"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.dev]
debug = true
